# ArrosageAutomatique

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  config.h  config.status  configure.ac  system.h  tp_automated_watering.1  tp_automated_watering.c  tp_automated_watering.info  tp_automated_watering.lsm  tp_automated_watering.lsm.in  tp_automated_watering.spec  tp_automated_watering.spec.in  tp_automated_watering.texi
.deps/: tp_automated_watering.Po  xmalloc.Po
src/: automaton.c  automaton.h  utils.c  utils.h  xmalloc.c  xmalloc.h
src/.deps/: automaton.Po  xmalloc.Po
